--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,45 @@
-### Gradle template
-.gradle
-build/
+# -----------------------------------------
+# General system files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# Ignore Gradle GUI config
-gradle-app.setting
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+# Logs
+*.log
+logs/
+log/
+Back/**/*.log
+Back/logs/
+Back/log/
 
-# Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
+# Backup & temporary files
+*~
+*.swp
+*.tmp
+*.temp
+*.bak
+*.backup
+*.orig
 
-# Node
-/node_modules
-npm-debug.log
-yarn-error.log
-
-### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
-
-*.iml
 # IDEs and editors
 .idea/
 .project
 .classpath
-.c9/
-*.launch
 .settings/
+*.launch
+.c9/
 *.sublime-workspace
-
-# Visual Studio Code
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -40,136 +47,68 @@ yarn-error.log
 !.vscode/extensions.json
 .history/*
 
+# Node
+/node_modules
+Back/node_modules
+npm-debug.log
+yarn-error.log
+
+# Frontend build outputs
+/dist
+/tmp
+/out-tsc
+/bazel-out
+.angular/
+
 # Miscellaneous
-/.angular/cache
-.sass-cache/
+/.sass-cache
 /connect.lock
 /coverage
 /libpeerconnection.log
 testem.log
 /typings
 
-# System files
-.DS_Store
-Thumbs.db
-
-# User-specific stuff:
-# .idea/workspace.xml
-# .idea/tasks.xml
-# .idea/dictionaries
-
-# Sensitive or high-churn files:
-# .idea/dataSources.ids
-# .idea/dataSources.xml
-# .idea/sqlDataSources.xml
-# .idea/dynamic.xml
-# .idea/uiDesigner.xml
-
-# Gradle:
-# .idea/gradle.xml
-# .idea/libraries
-
-# Mongo Explorer plugin:
-# .idea/mongoSettings.
-
-## File-based project format:
-*.ipr
-*.iws
-
-# IntelliJ
-/out/
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-
-### Eclipse template
-*.pydevproject
-.metadata
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.loadpath
-
-# External tool builders
-.externalToolBuilders/
-
-# CDT-specific
-.cproject
-
-# sbteclipse plugin
-.target
-
-# TeXlipse plugin
-.texlipse
-
-### Java template
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-### Maven template
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-
-### Grails template
-# .gitignore for Grails 1.2 and 1.3
-# Although this should work for most versions of grails, it is
-# suggested that you use the "grails integrate-with --git" command
-# to generate your .gitignore file.
-
-# web application files
-/web-app/WEB-INF/classes
-
-# default HSQL database files for production mode
-/prodDb.*
-
-# general HSQL database files
-*Db.properties
-*Db.script
-
-# logs
-/stacktrace.log
-/test/reports
-/logs
-
-# project release file
-/*.war
-
-# plugin release files
-/*.zip
-/plugin.xml
-
-# older plugin install locations
-/plugins
-/web-app/plugins
-
-# "temporary" build files
-/target
+# -----------------------------------------
+# Back/ specific configuration and build artifacts
+Back/target/
+Back/build/
+Back/out/
+Back/bin/
+Back/.idea/
+Back/.settings/
+Back/.project
+Back/.classpath
+Back/.factorypath
+Back/.gradle
+Back/gradle/wrapper/gradle-wrapper.properties
+Back/gradlew
+Back/gradlew.bat
+Back/pom.xml.tag
+Back/pom.xml.releaseBackup
+Back/pom.xml.versionsBackup
+Back/pom.xml.next
+Back/release.properties
+Back/dependency-reduced-pom.xml
+Back/buildNumber.properties
+Back/.mvn/timing.properties
+Back/.mvn/wrapper/maven-wrapper.jar
+Back/deployment/
+Back/deployments/
+Back/**/*.class
+Back/**/*.jar
+Back/**/*.war
+Back/**/*.ear
+Back/**/*.nar
+Back/application-*.properties
+Back/application-*.yml
+Back/**/*.pid
+Back/**/*.db
+Back/**/*.h2.db
+Back/**/*.mv.db
+Back/**/*.trace.db
+Back/coverage/
+Back/.nyc_output
+Back/**/*.local.properties
+Back/**/local.properties
+Back/.env
+Back/.env.local
