--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 # -----------------------------------------
 # General system files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
+ehthumbs.db
 
 # Environment variables
 .env
@@ -53,13 +49,6 @@ Back/node_modules
 npm-debug.log
 yarn-error.log
 
-# Frontend build outputs
-/dist
-/tmp
-/out-tsc
-/bazel-out
-.angular/
-
 # Miscellaneous
 /.sass-cache
 /connect.lock
@@ -67,6 +56,34 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
+
+# Front/ specific
+Front/node_modules/
+Front/.angular/cache
+Front/.angular/
+Front/dist/
+Front/tmp/
+Front/out-tsc/
+Front/bazel-out/
+Front/.sass-cache
+Front/connect.lock
+Front/coverage
+Front/libpeerconnection.log
+Front/npm-debug.log
+Front/yarn-error.log
+Front/testem.log
+Front/typings
+Front/.vscode/*
+!Front/.vscode/settings.json
+!Front/.vscode/tasks.json
+!Front/.vscode/launch.json
+!Front/.vscode/extensions.json
+Front/.history/*
+Front/.DS_Store
+Front/Thumbs.db
+Front/src/environments/*.ts
+!Front/src/environments/environment.example.ts
+Front/.angular
 
 # -----------------------------------------
 # Back/ specific configuration and build artifacts
