--- a/Back/src/main/resources/application.yml
+++ b/Back/src/main/resources/application.yml
@@ -11,6 +11,11 @@ spring:
     hibernate:
       ddl-auto:  none
       format_sql: true
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
+      enabled: true
 logging:
   level:
     org:
@@ -22,3 +27,6 @@ logging:
 jwt:
   secret: xlJQSlmC4lT8HPtBY6vCf07klWfhUMmQze
   expiration: 36000000
+app:
+  upload:
+    dir: ./uploads
